# risk

./: Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: docker-publish.yml
notebooks/: ga.ipynb  presentation.ipynb
src/risk/: board.py  cards.py  definitions.py  game.py  geneticplayer.py  genome.py  missions.py  player.py  ranker.py  riskga.py
tests/: __init__.py
